fixing alignment

--- a/app/assets/css/app.css.scss
+++ b/app/assets/css/app.css.scss
@@ -19,3 +19,10 @@ body, html {
 #pusher {
   height: 60px;
 }
+
+.disabled {
+  color: #555;
+  text-decoration:none;
+  cursor: default;
+  pointer-events:none;
+}
