--- a/app/assets/css/paginator.css.scss
+++ b/app/assets/css/paginator.css.scss
@@ -1,6 +1,3 @@
-.disabled {
-  color: #555;
-  text-decoration:none;
-  cursor: default;
-  pointer-events:none;
+#paginator {
+  margin-left: 2%;
 }
